--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -29,6 +29,11 @@ main {
 section {
 	max-width: 800px;
 	margin: 50px auto;
+
+	p {
+		font-weight: 700;
+		font-size: large;
+	}
 }
 
 .container {
