--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -33,7 +33,7 @@
 				</section>
 
 				<section>
-					<strong>Form Results</strong>
+					<p><strong>Form Results</strong></p>
 					<div id="agreement"></div>
 					<div id="subjectivity"></div>
 					<div id="confidence"></div>
