--- a/src/client/styles/form.scss
+++ b/src/client/styles/form.scss
@@ -18,13 +18,13 @@ input {
 	width: 100%;
 	border-radius: 10px;
 	text-align: center;
-	border: 3px solid #000;
+	border: 1px solid #000;
 	outline: none;
 	color: #000;
 	display: block;
 	cursor: pointer;
 	overflow: hidden;
-	background: white;
+	background: #f2f2f2;
 	transition: 0.3s;
 	margin: 0.5rem 0;
 	&:hover {
